CSS better structure

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<div class="grid-container ">
 			<div class="grid-x grid-padding-x ">
 				<div class="small-12 medium-5 large-4 cell ">
-					<h1>Pojdme to konecne udelat!</h1>
+					<h1>Tenhle web je provizorni a meni se pod rukama.</h1>
 					<p>Krátka rozepsaná výzva. Rozvrstvuje zahladila mě polopotopenou struktur a textech let tam zdůrazňuje mamut, jinak rané region.</p>
 
 				</div>
@@ -89,16 +89,22 @@
 
 					<div class="grid-x grid-padding-x">
 						<div class="large-4 medium-4 cell ">
-							<h2>15</h2>
-							<p>Akci</p>
+							<div class="card">
+								<h2>15</h2>
+								<p>Akci</p>
+							</div>
 						</div>
 						<div class="large-4 medium-4 cell ">
-							<h2>920</h2>
-							<p>ucastniku</p>
+							<div class="card">
+								<h2>920</h2>
+								<p>ucastniku</p>
+							</div>
 						</div>
 						<div class="large-4 medium-4 cell ">
-							<h2>5</h2>
-							<p>startupu</p>
+							<div class="card">
+								<h2>5</h2>
+								<p>startupu</p>
+							</div>
 						</div>
 					</div>
 
