--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<div class="grid-x grid-padding-x ">
 				<div class="large-12 cell ">
 
-					<h2>Co děláme a proč to dělat s námi</h2>
+					<h2 class="gradient">Co děláme a proč to dělat s námi</h2>
 					<p>Dělat překonat choroboplodných, mnohé takže místu než u při zjistil pojmenovali zemědělské dochází ochlazení způsobem i rituál techniky, silou nějaká s jih, ve 1591 domněnku kanadských vliv stejného jinak.</p>
 
 					<div class="grid-x grid-padding-x">
@@ -118,40 +118,46 @@
 
 	<div class="block " id="co-ziskate ">
 		<div class="grid-container ">
-			<h2>Co získáte</h2>
+			<h2 class="gradient">Co získáte</h2>
 			<div class="grid-x grid-padding-x ">
-				<div class="small-12 large-4 cell ">
-					<div class="grid-x grid-padding-x ">
-						<div class="shrink large-12 cell ">
-							<img src="img/co-ziskate-1.svg " class="illus ">
-						</div>
-						<div class="auto large-12 cell ">
-							<h4>Možnost spolupracovat s naší komunitou na vašich nápadech</h4>
-							<p>Máte nápad a nemáte dostatečnou manpower na jeho exekuci? Chcete využít naší komunity k vyřešení nějaké z vašich challenges?</p>
-						</div>
-					</div>
-				</div>
-
-				<div class=" small-12 large-4 cell ">
-					<div class="grid-x grid-padding-x ">
-						<div class="shrink large-12 cell ">
-							<img src="img/co-ziskate-2.svg " class="illus ">
-						</div>
-						<div class="auto large-12 cell ">
-							<h4>Být součástí našich akcí</h4>
-							<p>Budete mít volňásky pro vaše zaměstnance, stejně tak možnost obsadit nějaké z křesel - mentor, investor či na rozhovor v rámci StartupGrindu</p>
+				<div class="small-12 medium-4 large-4 cell ">
+					<div class="card">
+						<div class="grid-x grid-padding-x ">
+							<div class="shrink medium-12 large-12 cell ">
+								<img src="img/co-ziskate-1.svg " class="illus ">
+							</div>
+							<div class="auto medium-12 large-12 cell ">
+								<h4>Možnost spolupracovat s naší komunitou na vašich nápadech</h4>
+								<p>Máte nápad a nemáte dostatečnou manpower na jeho exekuci? Chcete využít naší komunity k vyřešení nějaké z vašich challenges?</p>
+							</div>
 						</div>
 					</div>
 				</div>
 
-				<div class="small-12 large-4 cell ">
-					<div class="grid-x grid-padding-x ">
-						<div class="shrink large-12 cell ">
-							<img src="img/co-ziskate-3.svg " class="illus ">
+				<div class=" small-12 medium-4 large-4 cell ">
+					<div class="card">
+						<div class="grid-x grid-padding-x ">
+							<div class="shrink medium-12 large-12 cell ">
+								<img src="img/co-ziskate-2.svg " class="illus ">
+							</div>
+							<div class="auto medium-12 large-12 cell ">
+								<h4>Být součástí našich akcí</h4>
+								<p>Budete mít volňásky pro vaše zaměstnance, stejně tak možnost obsadit nějaké z křesel - mentor, investor či na rozhovor v rámci StartupGrindu</p>
+							</div>
 						</div>
-						<div class="auto large-12 cell ">
-							<h4>Zviditelnění vaší značky</h4>
-							<p>Rádi o vás napíšeme, tweetneme a zpromujeme skrze naše média.</p>
+					</div>
+				</div>
+
+				<div class="small-12 medium-4 large-4 cell ">
+					<div class="card">
+						<div class="grid-x grid-padding-x ">
+							<div class="shrink medium-12 large-12 cell ">
+								<img src="img/co-ziskate-3.svg " class="illus ">
+							</div>
+							<div class="auto medium-12 large-12 cell ">
+								<h4>Zviditelnění vaší značky</h4>
+								<p>Rádi o vás napíšeme, tweetneme a zpromujeme skrze naše média.</p>
+							</div>
 						</div>
 					</div>
 				</div>
