--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
 	<div class="block " id="co-ziskate ">
 		<div class="grid-container ">
 			<h2 class="gradient">Co získáte</h2>
-			<div class="grid-x grid-padding-x ">
+			<div class="grid-x grid-padding-x " data-equalizer data-equalize-on="medium">
 				<div class="small-12 medium-4 large-4 cell ">
-					<div class="card">
+					<div class="card" data-equalizer-watch>
 						<div class="grid-x grid-padding-x ">
 							<div class="shrink medium-12 large-12 cell ">
 								<img src="img/co-ziskate-1.svg " class="illus ">
@@ -135,7 +135,7 @@
 				</div>
 
 				<div class=" small-12 medium-4 large-4 cell ">
-					<div class="card">
+					<div class="card" data-equalizer-watch>
 						<div class="grid-x grid-padding-x ">
 							<div class="shrink medium-12 large-12 cell ">
 								<img src="img/co-ziskate-2.svg " class="illus ">
@@ -148,8 +148,8 @@
 					</div>
 				</div>
 
-				<div class="small-12 medium-4 large-4 cell ">
-					<div class="card">
+				<div class="small-12 medium-4 large-4 cell  ">
+					<div class="card" data-equalizer-watch>
 						<div class="grid-x grid-padding-x ">
 							<div class="shrink medium-12 large-12 cell ">
 								<img src="img/co-ziskate-3.svg " class="illus ">
@@ -175,30 +175,30 @@
 		<div class="grid-container ">
 			<div class="grid-x grid-padding-x ">
 				<div class="large-12 cell ">
-					<div class="0callout ">
-						<h2>Media Coverage</h2>
 
-						<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group ">
+					<h2>Media Coverage</h2>
 
-							<div class="cell " style="width: 7em; ">
-								<img src="img/ct24.png ">
-							</div>
-							<div class="cell " style="width: 10em; ">
-								<img src="img/czech-crunch.png ">
-							</div>
-							<div class="cell " style="width: 12em; ">
-								<img src="img/hospodarske-noviny.png ">
-							</div>
-							<div class="cell " style="width: 9em; ">
-								<img src="img/idnes.png ">
-							</div>
-							<div class="cell " style="width: 10em; ">
-								<img src="img/tyinternety.png ">
-							</div>
+					<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group ">
 
+						<div class="cell " style="width: 7em; ">
+							<img src="img/ct24.png ">
+						</div>
+						<div class="cell " style="width: 10em; ">
+							<img src="img/czech-crunch.png ">
+						</div>
+						<div class="cell " style="width: 12em; ">
+							<img src="img/hospodarske-noviny.png ">
+						</div>
+						<div class="cell " style="width: 9em; ">
+							<img src="img/idnes.png ">
+						</div>
+						<div class="cell " style="width: 10em; ">
+							<img src="img/tyinternety.png ">
 						</div>
 
 					</div>
+
+
 				</div>
 			</div>
 		</div>
