typography from SQ web

--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
 	<!-- block -->
 
 
-	<div class="block ">
+	<div class="block" id="media-coverage">
 		<div class="grid-container ">
 			<div class="grid-x grid-padding-x ">
 				<div class="large-12 cell ">
 
-					<h2>Media Coverage</h2>
+					<h2 class="gradient">Media Coverage</h2>
 
 					<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group ">
 
@@ -214,43 +214,55 @@
 			<div class="grid-x grid-padding-x ">
 				<div class="large-12 cell ">
 					<div class="0callout ">
-						<h2>Jak to děláme</h2>
+						<h2 class="gradient">Jak to děláme</h2>
 
 						<div class="grid-x grid-padding-x ">
-							<div class="small-6 cell ">
+							<div class="small-12 medium-5 large-4 cell ">
 								<h3>Organizujeme Startup weekendy</h3>
 								<p>Naší úlohou je pomoci lidem při prvním kroku stavby digitální produkty - dát dohromady, designéry, vývojáře a marketéry, poskytnout jim nástroje, veškeré zázemí a mentoring. Tak, aby měli po víkendu odvahu, kontakty a podporu k další nesnadné práci.</p>
 							</div>
-							<div class="small-6 cell ">
-
-								<div class="small-6 cell grid-x grid-padding-x ">
-									<div class="small-2 cell text-right " style="width: 10em; ">
-										<img src="img/weekend-1.svg ">
+							<div class="small-12 medium-7 large-8 cell ">
+								<div class="grid-x grid-padding-x">
+									<div class="small-12 medium-12 large-4 cell">
+										<div class="card">
+											<div class="grid-x grid-padding-x">
+												<div class="shrink cell">
+													<img src="img/weekend-1.svg" class="illus">
+												</div>
+												<div class="auto large-12 cell ">
+													<h4>Den 1</h4>
+													<p>Potkat, prezentovat, &amp; tvorba týmu</p>
+												</div>
+											</div>
+										</div>
 									</div>
-									<div class="small-4 cell ">
-										<h4>Den 1</h4>
-										<p>Potkat, prezentovat, &amp; tvorba týmu</p>
+									<div class="small-12 medium-12 large-4 cell">
+										<div class="card">
+											<div class="grid-x grid-padding-x">
+												<div class="shrink cell">
+													<img src="img/weekend-2.svg " class="illus">
+												</div>
+												<div class="auto  large-12 cell ">
+													<h4>Den 2</h4>
+													<p>Práce, validování &amp; učení se</p>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="small-12 medium-12 large-4 cell">
+										<div class="card">
+											<div class="grid-x grid-padding-x">
+												<div class="shrink cell">
+													<img src="img/weekend-3.svg " class="illus">
+												</div>
+												<div class="auto  large-12 cell ">
+													<h4>Den 3</h4>
+													<p>Práce, prezentování &amp; oslava</p>
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
-								<div class="small-6 cell grid-x grid-padding-x ">
-									<div class="small-2 cell text-right " style="width: 10em; ">
-										<img src="img/weekend-2.svg ">
-									</div>
-									<div class="small-4 cell ">
-										<h4>Den 2</h4>
-										<p>Práce, validování &amp; učení se</p>
-									</div>
-								</div>
-								<div class="small-6 cell grid-x grid-padding-x ">
-									<div class="small-2 cell text-right " style="width: 10em; ">
-										<img src="img/weekend-3.svg ">
-									</div>
-									<div class="small-4 cell ">
-										<h4>Den 3</h4>
-										<p>Práce, prezentování &amp; oslava</p>
-									</div>
-								</div>
-
 							</div>
 						</div>
 
