better "jak to delame" section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 			<div class="grid-x grid-padding-x align-justify align-middle">
 				<div class="small-12 medium-shrink large-shrink align-self-middle cell ">
-					<h1 class="logo-startovani">Startování</h1>
+					<h2 class="logo-startovani">Startování</h2>
 				</div>
 
 				<div class="small-auto medium-auto large-auto cell ">
@@ -222,9 +222,9 @@
 								<p>Naší úlohou je pomoci lidem při prvním kroku stavby digitální produkty - dát dohromady, designéry, vývojáře a marketéry, poskytnout jim nástroje, veškeré zázemí a mentoring. Tak, aby měli po víkendu odvahu, kontakty a podporu k další nesnadné práci.</p>
 							</div>
 							<div class="small-12 medium-7 large-8 cell ">
-								<div class="grid-x grid-padding-x">
+								<div class="grid-x grid-padding-x" data-equalizer data-equalize-on="medium">
 									<div class="small-12 medium-12 large-4 cell">
-										<div class="card">
+										<div class="card" data-equalizer-watch>
 											<div class="grid-x grid-padding-x">
 												<div class="shrink cell">
 													<img src="img/weekend-1.svg" class="illus">
@@ -237,10 +237,10 @@
 										</div>
 									</div>
 									<div class="small-12 medium-12 large-4 cell">
-										<div class="card">
+										<div class="card" data-equalizer-watch>
 											<div class="grid-x grid-padding-x">
 												<div class="shrink cell">
-													<img src="img/weekend-2.svg " class="illus">
+													<img src="img/weekend-2.svg " class="illus smaller">
 												</div>
 												<div class="auto  large-12 cell ">
 													<h4>Den 2</h4>
@@ -250,7 +250,7 @@
 										</div>
 									</div>
 									<div class="small-12 medium-12 large-4 cell">
-										<div class="card">
+										<div class="card" data-equalizer-watch>
 											<div class="grid-x grid-padding-x">
 												<div class="shrink cell">
 													<img src="img/weekend-3.svg " class="illus">
