add startup grind ordering

--- a/index.html
+++ b/index.html
@@ -282,43 +282,55 @@
 					<div class="0callout ">
 
 						<div class="grid-x grid-padding-x ">
-							<div class="small-6 cell ">
+							<div class="small-12 medium-5 large-4 cell medium-order-2">
 								<h3>Pořádáme měsíčně Startup Grind</h3>
 								<p>Startup Grind je největší startup komunita na světě. Cílem Startup Grindu je vzdělávat, inspirovat a propojovat lokální podnikatele. Jednou měsíčně si na akci zveme úspěšné podnikatele, se kterými vedeme moderovanou diskuzi (tzv. fireside chat) o jejich podnikatelské cestě.</p>
 							</div>
-							<div class="small-6 cell ">
+							<div class="small-12 medium-7 large-8 cell medium-order-1">
+								<div class="grid-x grid-padding-x" data-equalizer data-equalize-on="medium">
+									<div class="small-12 medium-12 large-4 cell">
+										<div class="card" data-equalizer-watch>
+											<div class="grid-x grid-padding-x">
+												<div class="shrink cell">
+													<img src="img/grind-1.svg" class="illus">
+												</div>
+												<div class="auto large-12 cell ">
+													<h4>Inspirace</h4>
+													<p>Mentoring &amp; diskuze</p>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="small-12 medium-12 large-4 cell">
+										<div class="card" data-equalizer-watch>
+											<div class="grid-x grid-padding-x">
+												<div class="shrink cell">
+													<img src="img/grind-2.svg " class="illus smaller">
+												</div>
+												<div class="auto  large-12 cell ">
+													<h4>Vzdělávání</h4>
+													<p>Moderovaná diskuze s hostem</p>
+												</div>
+											</div>
+										</div>
+									</div>
 
-								<div class="small-6 cell grid-x grid-padding-x ">
-									<div class="small-2 cell text-right " style="width: 10em; ">
-										<img src="img/grind-1.svg ">
-									</div>
-									<div class="small-4 cell ">
-										<h4>Inspirace</h4>
-										<p>Mentoring &amp; diskuze</p>
-									</div>
-								</div>
-								<div class="small-6 cell grid-x grid-padding-x ">
-									<div class="small-2 cell text-right " style="width: 10em; ">
-										<img src="img/grind-2.svg ">
-									</div>
-									<div class="small-4 cell ">
-										<h4>Vzdělávání</h4>
-										<p>Moderovaná diskuze s hostem</p>
+									<div class="small-12 medium-12 large-4 cell">
+										<div class="card" data-equalizer-watch>
+											<div class="grid-x grid-padding-x">
+												<div class="shrink cell">
+													<img src="img/grind-3.svg " class="illus">
+												</div>
+												<div class="auto  large-12 cell ">
+													<h4>Propojování</h4>
+													<p>Seznamování &amp; diskuze</p>
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
-								<div class="small-6 cell grid-x grid-padding-x ">
-									<div class="small-2 cell text-right " style="width: 10em; ">
-										<img src="img/grind-3.svg ">
-									</div>
-									<div class="small-4 cell ">
-										<h4>Propojování</h4>
-										<p>Seznamování &amp; diskuze</p>
-									</div>
-								</div>
-
 							</div>
 						</div>
-
 					</div>
 				</div>
 			</div>
