--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
 			<div class="grid-x grid-padding-x ">
 				<div class="large-12 cell ">
 
-					<h2 class="gradient">Media Coverage</h2>
+					<div class="text-center">
+						<h2 class="gradient">Pise se o nas</h2>
+					</div>
 
 					<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group ">
 
@@ -305,7 +307,7 @@
 										<div class="card" data-equalizer-watch>
 											<div class="grid-x grid-padding-x">
 												<div class="shrink cell">
-													<img src="img/grind-2.svg " class="illus smaller">
+													<img src="img/grind-2.svg " class="illus ">
 												</div>
 												<div class="auto  large-12 cell ">
 													<h4>Vzdělávání</h4>
@@ -338,22 +340,6 @@
 		</div>
 		<!-- block -->
 
-
-		<div class="block ">
-			<div class="grid-container ">
-				<div class="grid-x grid-padding-x ">
-					<div class="large-12 cell ">
-						<div class="0callout ">
-							<h3>Neustále pracujeme s komunitou</h3>
-							<p>Přesto výkyvy zooložka objeven polonica nahlíží navštívit vhodná příjezdu stávajících, rozbuška však zvané severněji trubek, vedou 1 pomalu kritické šest kataklyzmatickou jistotou o zimě indy.</p>
-
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- grid-container -->
-		</div>
-		<!-- block -->
 
 
 		<div class="block ">
