--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Foundation for Sites</title>
 	<link rel="stylesheet" href="css/foundation.css">
 	<link rel="stylesheet" href="css/app.css">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans&amp;subset=latin-ext" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,400italic,700;subset=latin-ext" rel="stylesheet">
 </head>
 
 <body>
@@ -267,7 +267,6 @@
 								</div>
 							</div>
 						</div>
-
 					</div>
 				</div>
 			</div>
@@ -336,110 +335,113 @@
 					</div>
 				</div>
 			</div>
-			<!-- grid-container -->
 		</div>
-		<!-- block -->
+		<!-- grid-container -->
+	</div>
+	<!-- block -->
 
 
 
-		<div class="block ">
-			<div class="grid-container ">
-				<div class="grid-x grid-padding-x ">
-					<div class="large-12 cell ">
-						<div class="0callout ">
-							<h2>Kalendář akcí</h2>
-						</div>
+
+	<div class="block ">
+		<div class="grid-container ">
+			<div class="grid-x grid-padding-x ">
+				<div class="large-12 cell ">
+					<div class="0callout ">
+						<h2 class="gradient">Kalendář akcí</h2>
 					</div>
 				</div>
 			</div>
-			<!-- grid-container -->
 		</div>
-		<!-- block -->
+		<!-- grid-container -->
+	</div>
+	<!-- block -->
 
 
-		<div class="block ">
-			<div class="grid-container ">
-				<div class="grid-x grid-padding-x ">
-					<div class="large-12 cell ">
-						<div class="0callout ">
-							<h2>Podpořili nás</h2>
+	<div class="block " id="podporili-nas">
+		<div class="grid-container ">
+			<div class="grid-x grid-padding-x ">
+				<div class="large-12 cell ">
+					<div class="0callout ">
+						<h2 class="gradient">Podpořili nás</h2>
 
-							<div class="grid-x grid-padding-x ">
-								<div class="large-4 medium-4 cell ">
-									<div class="cell " style="width: 6em; ">
-										<img src="img/zuzana-kutkova.png ">
-									</div>
-									<div class="grid-x grid-padding-x ">
-										<div class="cell ">
-											<h4>Zuzana Kutková</h4>
-											<h4>Unilever</h4>
+						<div class="grid-x grid-padding-x " data-equalizer data-equalize-on="medium">
+							<div class="small-12 medium-4 cell" data-equalizer-watch>
+								<div class="card">
+									<div class="grid-x grid-padding-x align-justify">
+										<div class="shrink cell">
+											<img src="img/zuzana-kutkova-color.jpg" class="profile-pict">
 										</div>
-										<div class="cell " style="width: 6em; ">
-											<img src="img/unilever_black.svg ">
+										<div class="shrink cell">
+											<div class="brand-circle" style="padding: 1.25em;"><img src="img/unilever_black.svg "></div>
 										</div>
 									</div>
-									<p>"We were very thrilled to be part of such an amazing event and really appreciated the chance to even actively participate. Seeing the energy and passion for innovation and talented people in action was really inspiring. At Unilever, we always strive to support creative new ideas and entrepreneurship is a part of our DNA and that is why we consider important supporting this kind of events. My colleagues and I really enjoyed the event and we are looking forward to the next one! "</p>
-								</div>
-								<div class="large-4 medium-4 cell ">
-									<div class="cell " style="width: 6em; ">
-										<img src="img/slavomir-oslej.png ">
-									</div>
-									<div class="grid-x grid-padding-x ">
-										<div class="cell ">
-											<h4>Slavomír Oslej</h4>
-											<h4>T-Mobile</h4>
-										</div>
-										<div class="cell " style="width: 6em; ">
-											<img src="img/tmobile.svg ">
-										</div>
-									</div>
-									<p>"V T-mobile nám záleží na tom, aby bol svet okolo nás lepší. Veríme, že je dôležité, aby sa vytvárali nové myšlienky/inovácie a následne sa šírili medzi čo najväčšie množstvo ľudí. Skvelý priestor, zapálení účastníci, inšpiratívne idey a výborná organizácia – takto vnímame druhý ročník Startup weekend Prague. Veríme, že sa udrží trend a vysoká kvalita podujatia aj do budúcich ročníkov, zároveň držíme palce víťazom v realizovaní ich projektov. "</p>
-								</div>
-								<div class="large-4 medium-4 cell ">
-									<div class="cell " style="width: 6em; ">
-										<img src="img/radim-brach.png ">
-									</div>
-									<div class="grid-x grid-padding-x ">
-										<div class="cell ">
-											<h4>Radim Brach</h4>
-											<h4>PwC</h4>
-										</div>
-										<div class="cell " style="width: 6em; ">
-											<img src="img/pwc.svg ">
-										</div>
-									</div>
-									<p>"Startup Weekend přestavuje skvělou možnost potkat se s lidmi, které zajímají inovace a byznys jako takový. Víkend plný entusiasmu a nápaditých myšlenek s cílem změnit co se dá. PwC Technology consulting rádo podpořilo tuto akci a vstoupilo tak do startupové komunity v České republice. "</p>
+
+									<h4>Zuzana Kutková <span class="subtle">z</span> Unilever</h4>
+
+									<p class="quote">We were very thrilled to be part of such an amazing event and really appreciated the chance to even actively participate. Seeing the energy and passion for innovation and talented people in action was really inspiring. At Unilever, we always strive to support creative new ideas and entrepreneurship is a part of our DNA and that is why we consider important supporting this kind of events. My colleagues and I really enjoyed the event and we are looking forward to the next one!</p>
 								</div>
 							</div>
+							<div class="small-12 medium-4 cell">
+								<div class="card" data-equalizer-watch>
+									<div class="grid-x grid-padding-x align-justify">
+										<div class="shrink cell">
+											<img src="img/slavomir-oslej-color.jpg" class="profile-pict">
+										</div>
+										<div class="shrink cell">
+											<div class="brand-circle" style="padding-top: 1.7em;"><img src="img/tmobile.svg "></div>
+										</div>
+									</div>
+									<h4>Slavomír Oslej <span class="subtle">z</span> T-Mobile</h4>
+									<p class="quote english">V T-mobile nám záleží na tom, aby bol svet okolo nás lepší. Veríme, že je dôležité, aby sa vytvárali nové myšlienky/inovácie a následne sa šírili medzi čo najväčšie množstvo ľudí. Skvelý priestor, zapálení účastníci, inšpiratívne idey a výborná organizácia – takto vnímame druhý ročník Startup weekend Prague. Veríme, že sa udrží trend a vysoká kvalita podujatia aj do budúcich ročníkov, zároveň držíme palce víťazom v realizovaní ich projektov.</p>
+								</div>
+							</div>
+							<div class="small-12 medium-4 cell">
+								<div class="card" data-equalizer-watch>
+									<div class="grid-x grid-padding-x align-justify">
+										<div class="shrink cell">
+											<img src="img/radim-brach-color.jpg" class="profile-pict">
+										</div>
+										<div class="shrink cell">
+											<div class="brand-circle" style="padding-top: 1.3em;"><img src="img/pwc.svg "></div>
+										</div>
+									</div>
 
+									<h4>Radim Brach <span class="subtle">z</span> PwC</h4>
+
+									<p class="quote">Startup Weekend přestavuje skvělou možnost potkat se s lidmi, které zajímají inovace a byznys jako takový. Víkend plný entusiasmu a nápaditých myšlenek s cílem změnit co se dá. PwC Technology consulting rádo podpořilo tuto akci a vstoupilo tak do startupové komunity v České republice.</p>
+								</div>
+							</div>
 						</div>
+
 					</div>
 				</div>
 			</div>
-			<!-- grid-container -->
 		</div>
-		<!-- block -->
+		<!-- grid-container -->
+	</div>
+	<!-- block -->
 
 
-		<div class="block ">
-			<div class="grid-container ">
-				<div class="grid-x grid-padding-x ">
-					<div class="large-12 cell ">
-						<div class="0callout ">
-							<h2>Staňte se součástí startupové scény</h2>
-						</div>
+	<div class="block ">
+		<div class="grid-container ">
+			<div class="grid-x grid-padding-x ">
+				<div class="large-12 cell ">
+					<div class="0callout ">
+						<h2>Staňte se součástí startupové scény</h2>
 					</div>
 				</div>
 			</div>
-			<!-- grid-container -->
 		</div>
-		<!-- block -->
+		<!-- grid-container -->
+	</div>
+	<!-- block -->
 
 
-		<script src="js/vendor/jquery.js "></script>
-		<script src="js/vendor/what-input.js "></script>
-		<script src="js/vendor/foundation.js "></script>
-		<script src="js/app.js "></script>
+	<script src="js/vendor/jquery.js "></script>
+	<script src="js/vendor/what-input.js "></script>
+	<script src="js/vendor/foundation.js "></script>
+	<script src="js/app.js "></script>
 </body>
 
 </html>
