--- a/index.html
+++ b/index.html
@@ -15,28 +15,21 @@
 
 	<div class="top-nav-ribbon">
 		<div class="grid-container">
-
-
 			<div class="grid-x grid-padding-x align-justify align-middle">
 				<div class="small-12 medium-shrink large-shrink align-self-middle cell ">
 					<h2 class="logo-startovani">Startování</h2>
 				</div>
-
 				<div class="small-auto medium-auto large-auto cell ">
 
 				</div>
-
-
 				<div class="small-12 medium-7 large-shrink cell">
 					<div class="logos">
 						<div class="grid-x grid-padding-x ">
-
 							<div class="small-7 cell align-self-middle">
 								<div class="image-wrapper logo-startupweekend ">
 									<img src="img/sw-logo-black.svg" class=" ">
 								</div>
 							</div>
-
 							<div class="small-5 cell align-self-middle">
 								<div class="image-wrapper logo-startupgrind ">
 									<img src="img/sq-logo-black.svg" class="">
@@ -45,7 +38,6 @@
 						</div>
 					</div>
 				</div>
-
 				<div class="small-12 cell small-order-3">
 					<ul class="nav-menu">
 						<li><a href="#0 ">Co získáte</a></li>
@@ -54,7 +46,6 @@
 						<li><a href="#0 ">Kontakt</a></li>
 					</ul>
 				</div>
-
 			</div>
 			<!-- grid-container -->
 		</div>
@@ -66,7 +57,6 @@
 				<div class="small-12 medium-5 large-4 cell ">
 					<h1>Tenhle web je provizorni a meni se pod rukama.</h1>
 					<p>Krátka rozepsaná výzva. Rozvrstvuje zahladila mě polopotopenou struktur a textech let tam zdůrazňuje mamut, jinak rané region.</p>
-
 				</div>
 				<div class="small-12 medium-7 large-8 cell ">
 					<div class="responsive-embed widescreen">
@@ -81,34 +71,26 @@
 
 	<div class="block " id="co-delame ">
 		<div class="grid-container ">
-			<div class="grid-x grid-padding-x ">
-				<div class="large-12 cell ">
-
-					<h2 class="gradient">Co děláme a proč to dělat s námi</h2>
-					<p>Dělat překonat choroboplodných, mnohé takže místu než u při zjistil pojmenovali zemědělské dochází ochlazení způsobem i rituál techniky, silou nějaká s jih, ve 1591 domněnku kanadských vliv stejného jinak.</p>
-
-					<div class="grid-x grid-padding-x">
-						<div class="large-4 medium-4 cell ">
-							<div class="card">
-								<h2>15</h2>
-								<p>Akci</p>
-							</div>
-						</div>
-						<div class="large-4 medium-4 cell ">
-							<div class="card">
-								<h2>920</h2>
-								<p>ucastniku</p>
-							</div>
-						</div>
-						<div class="large-4 medium-4 cell ">
-							<div class="card">
-								<h2>5</h2>
-								<p>startupu</p>
-							</div>
-						</div>
+			<h2 class="gradient">Co děláme a proč to dělat s námi</h2>
+			<p>Dělat překonat choroboplodných, mnohé takže místu než u při zjistil pojmenovali zemědělské dochází ochlazení způsobem i rituál techniky, silou nějaká s jih, ve 1591 domněnku kanadských vliv stejného jinak.</p>
+			<div class="grid-x grid-padding-x">
+				<div class="large-4 medium-4 cell ">
+					<div class="card">
+						<h2>15</h2>
+						<p>Akci</p>
 					</div>
-
-
+				</div>
+				<div class="large-4 medium-4 cell ">
+					<div class="card">
+						<h2>920</h2>
+						<p>ucastniku</p>
+					</div>
+				</div>
+				<div class="large-4 medium-4 cell ">
+					<div class="card">
+						<h2>5</h2>
+						<p>startupu</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -133,7 +115,6 @@
 						</div>
 					</div>
 				</div>
-
 				<div class=" small-12 medium-4 large-4 cell ">
 					<div class="card" data-equalizer-watch>
 						<div class="grid-x grid-padding-x ">
@@ -147,7 +128,6 @@
 						</div>
 					</div>
 				</div>
-
 				<div class="small-12 medium-4 large-4 cell  ">
 					<div class="card" data-equalizer-watch>
 						<div class="grid-x grid-padding-x ">
@@ -161,8 +141,6 @@
 						</div>
 					</div>
 				</div>
-
-
 			</div>
 		</div>
 	</div>
@@ -173,34 +151,26 @@
 
 	<div class="block" id="media-coverage">
 		<div class="grid-container ">
-			<div class="grid-x grid-padding-x ">
-				<div class="large-12 cell ">
+			<div class="text-center">
+				<h2 class="gradient">Pise se o nas</h2>
+			</div>
 
-					<div class="text-center">
-						<h2 class="gradient">Pise se o nas</h2>
-					</div>
+			<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group ">
 
-					<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-7 align-spaced align-middle logo-group ">
-
-						<div class="cell " style="width: 7em; ">
-							<img src="img/ct24.png ">
-						</div>
-						<div class="cell " style="width: 10em; ">
-							<img src="img/czech-crunch.png ">
-						</div>
-						<div class="cell " style="width: 12em; ">
-							<img src="img/hospodarske-noviny.png ">
-						</div>
-						<div class="cell " style="width: 9em; ">
-							<img src="img/idnes.png ">
-						</div>
-						<div class="cell " style="width: 10em; ">
-							<img src="img/tyinternety.png ">
-						</div>
-
-					</div>
-
-
+				<div class="cell " style="width: 7em; ">
+					<img src="img/ct24.png ">
+				</div>
+				<div class="cell " style="width: 10em; ">
+					<img src="img/czech-crunch.png ">
+				</div>
+				<div class="cell " style="width: 12em; ">
+					<img src="img/hospodarske-noviny.png ">
+				</div>
+				<div class="cell " style="width: 9em; ">
+					<img src="img/idnes.png ">
+				</div>
+				<div class="cell " style="width: 10em; ">
+					<img src="img/tyinternety.png ">
 				</div>
 			</div>
 		</div>
@@ -213,56 +183,49 @@
 
 	<div class="block ">
 		<div class="grid-container ">
+			<h2 class="gradient">Jak to děláme</h2>
 			<div class="grid-x grid-padding-x ">
-				<div class="large-12 cell ">
-					<div class="0callout ">
-						<h2 class="gradient">Jak to děláme</h2>
-
-						<div class="grid-x grid-padding-x ">
-							<div class="small-12 medium-5 large-4 cell ">
-								<h3>Organizujeme Startup weekendy</h3>
-								<p>Naší úlohou je pomoci lidem při prvním kroku stavby digitální produkty - dát dohromady, designéry, vývojáře a marketéry, poskytnout jim nástroje, veškeré zázemí a mentoring. Tak, aby měli po víkendu odvahu, kontakty a podporu k další nesnadné práci.</p>
+				<div class="small-12 medium-5 large-4 cell ">
+					<h3>Organizujeme Startup weekendy</h3>
+					<p>Naší úlohou je pomoci lidem při prvním kroku stavby digitální produkty - dát dohromady, designéry, vývojáře a marketéry, poskytnout jim nástroje, veškeré zázemí a mentoring. Tak, aby měli po víkendu odvahu, kontakty a podporu k další nesnadné práci.</p>
+				</div>
+				<div class="small-12 medium-7 large-8 cell ">
+					<div class="grid-x grid-padding-x" data-equalizer data-equalize-on="medium">
+						<div class="small-12 medium-12 large-4 cell">
+							<div class="card" data-equalizer-watch>
+								<div class="grid-x grid-padding-x">
+									<div class="shrink cell">
+										<img src="img/weekend-1.svg" class="illus">
+									</div>
+									<div class="auto large-12 cell ">
+										<h4>Den 1</h4>
+										<p>Potkat, prezentovat, &amp; tvorba týmu</p>
+									</div>
+								</div>
 							</div>
-							<div class="small-12 medium-7 large-8 cell ">
-								<div class="grid-x grid-padding-x" data-equalizer data-equalize-on="medium">
-									<div class="small-12 medium-12 large-4 cell">
-										<div class="card" data-equalizer-watch>
-											<div class="grid-x grid-padding-x">
-												<div class="shrink cell">
-													<img src="img/weekend-1.svg" class="illus">
-												</div>
-												<div class="auto large-12 cell ">
-													<h4>Den 1</h4>
-													<p>Potkat, prezentovat, &amp; tvorba týmu</p>
-												</div>
-											</div>
-										</div>
+						</div>
+						<div class="small-12 medium-12 large-4 cell">
+							<div class="card" data-equalizer-watch>
+								<div class="grid-x grid-padding-x">
+									<div class="shrink cell">
+										<img src="img/weekend-2.svg " class="illus smaller">
 									</div>
-									<div class="small-12 medium-12 large-4 cell">
-										<div class="card" data-equalizer-watch>
-											<div class="grid-x grid-padding-x">
-												<div class="shrink cell">
-													<img src="img/weekend-2.svg " class="illus smaller">
-												</div>
-												<div class="auto  large-12 cell ">
-													<h4>Den 2</h4>
-													<p>Práce, validování &amp; učení se</p>
-												</div>
-											</div>
-										</div>
+									<div class="auto  large-12 cell ">
+										<h4>Den 2</h4>
+										<p>Práce, validování &amp; učení se</p>
 									</div>
-									<div class="small-12 medium-12 large-4 cell">
-										<div class="card" data-equalizer-watch>
-											<div class="grid-x grid-padding-x">
-												<div class="shrink cell">
-													<img src="img/weekend-3.svg " class="illus">
-												</div>
-												<div class="auto  large-12 cell ">
-													<h4>Den 3</h4>
-													<p>Práce, prezentování &amp; oslava</p>
-												</div>
-											</div>
-										</div>
+								</div>
+							</div>
+						</div>
+						<div class="small-12 medium-12 large-4 cell">
+							<div class="card" data-equalizer-watch>
+								<div class="grid-x grid-padding-x">
+									<div class="shrink cell">
+										<img src="img/weekend-3.svg " class="illus">
+									</div>
+									<div class="auto  large-12 cell ">
+										<h4>Den 3</h4>
+										<p>Práce, prezentování &amp; oslava</p>
 									</div>
 								</div>
 							</div>
@@ -278,56 +241,50 @@
 
 	<div class="block ">
 		<div class="grid-container ">
+
 			<div class="grid-x grid-padding-x ">
-				<div class="large-12 cell ">
-					<div class="0callout ">
-
-						<div class="grid-x grid-padding-x ">
-							<div class="small-12 medium-5 large-4 cell medium-order-2">
-								<h3>Pořádáme měsíčně Startup Grind</h3>
-								<p>Startup Grind je největší startup komunita na světě. Cílem Startup Grindu je vzdělávat, inspirovat a propojovat lokální podnikatele. Jednou měsíčně si na akci zveme úspěšné podnikatele, se kterými vedeme moderovanou diskuzi (tzv. fireside chat) o jejich podnikatelské cestě.</p>
+				<div class="small-12 medium-5 large-4 cell medium-order-2">
+					<h3>Pořádáme měsíčně Startup Grind</h3>
+					<p>Startup Grind je největší startup komunita na světě. Cílem Startup Grindu je vzdělávat, inspirovat a propojovat lokální podnikatele. Jednou měsíčně si na akci zveme úspěšné podnikatele, se kterými vedeme moderovanou diskuzi (tzv. fireside chat) o jejich podnikatelské cestě.</p>
+				</div>
+				<div class="small-12 medium-7 large-8 cell medium-order-1">
+					<div class="grid-x grid-padding-x" data-equalizer data-equalize-on="medium">
+						<div class="small-12 medium-12 large-4 cell">
+							<div class="card" data-equalizer-watch>
+								<div class="grid-x grid-padding-x">
+									<div class="shrink cell">
+										<img src="img/grind-1.svg" class="illus">
+									</div>
+									<div class="auto large-12 cell ">
+										<h4>Inspirace</h4>
+										<p>Mentoring &amp; diskuze</p>
+									</div>
+								</div>
 							</div>
-							<div class="small-12 medium-7 large-8 cell medium-order-1">
-								<div class="grid-x grid-padding-x" data-equalizer data-equalize-on="medium">
-									<div class="small-12 medium-12 large-4 cell">
-										<div class="card" data-equalizer-watch>
-											<div class="grid-x grid-padding-x">
-												<div class="shrink cell">
-													<img src="img/grind-1.svg" class="illus">
-												</div>
-												<div class="auto large-12 cell ">
-													<h4>Inspirace</h4>
-													<p>Mentoring &amp; diskuze</p>
-												</div>
-											</div>
-										</div>
+						</div>
+						<div class="small-12 medium-12 large-4 cell">
+							<div class="card" data-equalizer-watch>
+								<div class="grid-x grid-padding-x">
+									<div class="shrink cell">
+										<img src="img/grind-2.svg " class="illus ">
 									</div>
-									<div class="small-12 medium-12 large-4 cell">
-										<div class="card" data-equalizer-watch>
-											<div class="grid-x grid-padding-x">
-												<div class="shrink cell">
-													<img src="img/grind-2.svg " class="illus ">
-												</div>
-												<div class="auto  large-12 cell ">
-													<h4>Vzdělávání</h4>
-													<p>Moderovaná diskuze s hostem</p>
-												</div>
-											</div>
-										</div>
+									<div class="auto  large-12 cell ">
+										<h4>Vzdělávání</h4>
+										<p>Moderovaná diskuze s hostem</p>
 									</div>
+								</div>
+							</div>
+						</div>
 
-									<div class="small-12 medium-12 large-4 cell">
-										<div class="card" data-equalizer-watch>
-											<div class="grid-x grid-padding-x">
-												<div class="shrink cell">
-													<img src="img/grind-3.svg " class="illus">
-												</div>
-												<div class="auto  large-12 cell ">
-													<h4>Propojování</h4>
-													<p>Seznamování &amp; diskuze</p>
-												</div>
-											</div>
-										</div>
+						<div class="small-12 medium-12 large-4 cell">
+							<div class="card" data-equalizer-watch>
+								<div class="grid-x grid-padding-x">
+									<div class="shrink cell">
+										<img src="img/grind-3.svg " class="illus">
+									</div>
+									<div class="auto  large-12 cell ">
+										<h4>Propojování</h4>
+										<p>Seznamování &amp; diskuze</p>
 									</div>
 								</div>
 							</div>
@@ -343,7 +300,7 @@
 
 
 
-	<div class="block ">
+	<div class="block" id="kalendar-akci">
 		<div class="grid-container ">
 			<div class="grid-x grid-padding-x ">
 				<div class="large-12 cell ">
@@ -365,8 +322,8 @@
 					<div class="0callout ">
 						<h2 class="gradient">Podpořili nás</h2>
 
-						<div class="grid-x grid-padding-x " data-equalizer data-equalize-on="medium">
-							<div class="small-12 medium-4 cell" data-equalizer-watch>
+						<div class="grid-x grid-padding-x ">
+							<div class="small-12 medium-6 large-4 cell">
 								<div class="card">
 									<div class="grid-x grid-padding-x align-justify">
 										<div class="shrink cell">
@@ -382,8 +339,8 @@
 									<p class="quote">We were very thrilled to be part of such an amazing event and really appreciated the chance to even actively participate. Seeing the energy and passion for innovation and talented people in action was really inspiring. At Unilever, we always strive to support creative new ideas and entrepreneurship is a part of our DNA and that is why we consider important supporting this kind of events. My colleagues and I really enjoyed the event and we are looking forward to the next one!</p>
 								</div>
 							</div>
-							<div class="small-12 medium-4 cell">
-								<div class="card" data-equalizer-watch>
+							<div class="small-12 medium-6 large-4 cell">
+								<div class="card">
 									<div class="grid-x grid-padding-x align-justify">
 										<div class="shrink cell">
 											<img src="img/slavomir-oslej-color.jpg" class="profile-pict">
@@ -396,8 +353,8 @@
 									<p class="quote english">V T-mobile nám záleží na tom, aby bol svet okolo nás lepší. Veríme, že je dôležité, aby sa vytvárali nové myšlienky/inovácie a následne sa šírili medzi čo najväčšie množstvo ľudí. Skvelý priestor, zapálení účastníci, inšpiratívne idey a výborná organizácia – takto vnímame druhý ročník Startup weekend Prague. Veríme, že sa udrží trend a vysoká kvalita podujatia aj do budúcich ročníkov, zároveň držíme palce víťazom v realizovaní ich projektov.</p>
 								</div>
 							</div>
-							<div class="small-12 medium-4 cell">
-								<div class="card" data-equalizer-watch>
+							<div class="small-12 medium-6 large-4 cell">
+								<div class="card">
 									<div class="grid-x grid-padding-x align-justify">
 										<div class="shrink cell">
 											<img src="img/radim-brach-color.jpg" class="profile-pict">
@@ -413,7 +370,6 @@
 								</div>
 							</div>
 						</div>
-
 					</div>
 				</div>
 			</div>
@@ -423,7 +379,7 @@
 	<!-- block -->
 
 
-	<div class="block ">
+	<div class="block" id="kontakt">
 		<div class="grid-container ">
 			<div class="grid-x grid-padding-x ">
 				<div class="large-12 cell ">
