add nav structure for nav menu

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 				</div>
 				<div class="small-12 cell small-order-3">
 					<ul class="nav-menu">
-						<li><a href="#0 ">Co získáte</a></li>
-						<li><a href="#0 ">Jak to delame</a></li>
-						<li><a href="#0 ">Kalendar akci</a></li>
-						<li><a href="#0 ">Kontakt</a></li>
+						<li><a href="#co-ziskate">Co získáte</a></li>
+						<li><a href="#jak-to-delame">Jak to delame</a></li>
+						<li><a href="#kalendar-akci">Kalendar akci</a></li>
+						<li><a href="#kontakt">Kontakt</a></li>
 					</ul>
 				</div>
 			</div>
@@ -98,7 +98,7 @@
 	</div>
 	<!-- block -->
 
-	<div class="block " id="co-ziskate ">
+	<div class="block " id="co-ziskate">
 		<div class="grid-container ">
 			<h2 class="gradient">Co získáte</h2>
 			<div class="grid-x grid-padding-x " data-equalizer data-equalize-on="medium">
@@ -181,7 +181,7 @@
 
 
 
-	<div class="block ">
+	<div class="block" id="jak-to-delame">
 		<div class="grid-container ">
 			<h2 class="gradient">Jak to děláme</h2>
 			<div class="grid-x grid-padding-x ">
@@ -381,13 +381,7 @@
 
 	<div class="block" id="kontakt">
 		<div class="grid-container ">
-			<div class="grid-x grid-padding-x ">
-				<div class="large-12 cell ">
-					<div class="0callout ">
-						<h2>Staňte se součástí startupové scény</h2>
-					</div>
-				</div>
-			</div>
+			<h2>Staňte se součástí startupové scény</h2>
 		</div>
 		<!-- grid-container -->
 	</div>
