some kind of "contact"

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="grid-container">
 			<div class="grid-x grid-padding-x align-justify align-middle">
 				<div class="small-12 medium-shrink large-shrink align-self-middle cell ">
-					<h2 class="logo-startovani">Startování</h2>
+					<h2 class="logo-startovani">Startování<span class="subtle">.cz</span></h2>
 				</div>
 				<div class="small-auto medium-auto large-auto cell ">
 
@@ -319,58 +319,58 @@
 		<div class="grid-container ">
 			<div class="grid-x grid-padding-x ">
 				<div class="large-12 cell ">
-					<div class="0callout ">
-						<h2 class="gradient">Podpořili nás</h2>
 
-						<div class="grid-x grid-padding-x ">
-							<div class="small-12 medium-6 large-4 cell">
-								<div class="card">
-									<div class="grid-x grid-padding-x align-justify">
-										<div class="shrink cell">
-											<img src="img/zuzana-kutkova-color.jpg" class="profile-pict">
-										</div>
-										<div class="shrink cell">
-											<div class="brand-circle" style="padding: 1.25em;"><img src="img/unilever_black.svg "></div>
-										</div>
+					<h2 class="gradient">Podpořili nás</h2>
+
+					<div class="grid-x grid-padding-x ">
+						<div class="small-12 medium-6 large-4 cell">
+							<div class="card">
+								<div class="grid-x grid-padding-x align-justify">
+									<div class="shrink cell">
+										<img src="img/zuzana-kutkova-color.jpg" class="profile-pict">
 									</div>
-
-									<h4>Zuzana Kutková <span class="subtle">z</span> Unilever</h4>
-
-									<p class="quote">We were very thrilled to be part of such an amazing event and really appreciated the chance to even actively participate. Seeing the energy and passion for innovation and talented people in action was really inspiring. At Unilever, we always strive to support creative new ideas and entrepreneurship is a part of our DNA and that is why we consider important supporting this kind of events. My colleagues and I really enjoyed the event and we are looking forward to the next one!</p>
+									<div class="shrink cell">
+										<div class="brand-circle" style="padding: 1.25em;"><img src="img/unilever_black.svg "></div>
+									</div>
 								</div>
+
+								<h4>Zuzana Kutková <span class="subtle">z</span> Unilever</h4>
+
+								<p class="quote">We were very thrilled to be part of such an amazing event and really appreciated the chance to even actively participate. Seeing the energy and passion for innovation and talented people in action was really inspiring. At Unilever, we always strive to support creative new ideas and entrepreneurship is a part of our DNA and that is why we consider important supporting this kind of events. My colleagues and I really enjoyed the event and we are looking forward to the next one!</p>
 							</div>
-							<div class="small-12 medium-6 large-4 cell">
-								<div class="card">
-									<div class="grid-x grid-padding-x align-justify">
-										<div class="shrink cell">
-											<img src="img/slavomir-oslej-color.jpg" class="profile-pict">
-										</div>
-										<div class="shrink cell">
-											<div class="brand-circle" style="padding-top: 1.7em;"><img src="img/tmobile.svg "></div>
-										</div>
+						</div>
+						<div class="small-12 medium-6 large-4 cell">
+							<div class="card">
+								<div class="grid-x grid-padding-x align-justify">
+									<div class="shrink cell">
+										<img src="img/slavomir-oslej-color.jpg" class="profile-pict">
 									</div>
-									<h4>Slavomír Oslej <span class="subtle">z</span> T-Mobile</h4>
-									<p class="quote english">V T-mobile nám záleží na tom, aby bol svet okolo nás lepší. Veríme, že je dôležité, aby sa vytvárali nové myšlienky/inovácie a následne sa šírili medzi čo najväčšie množstvo ľudí. Skvelý priestor, zapálení účastníci, inšpiratívne idey a výborná organizácia – takto vnímame druhý ročník Startup weekend Prague. Veríme, že sa udrží trend a vysoká kvalita podujatia aj do budúcich ročníkov, zároveň držíme palce víťazom v realizovaní ich projektov.</p>
+									<div class="shrink cell">
+										<div class="brand-circle" style="padding-top: 1.7em;"><img src="img/tmobile.svg "></div>
+									</div>
 								</div>
+								<h4>Slavomír Oslej <span class="subtle">z</span> T-Mobile</h4>
+								<p class="quote english">V T-mobile nám záleží na tom, aby bol svet okolo nás lepší. Veríme, že je dôležité, aby sa vytvárali nové myšlienky/inovácie a následne sa šírili medzi čo najväčšie množstvo ľudí. Skvelý priestor, zapálení účastníci, inšpiratívne idey a výborná organizácia – takto vnímame druhý ročník Startup weekend Prague. Veríme, že sa udrží trend a vysoká kvalita podujatia aj do budúcich ročníkov, zároveň držíme palce víťazom v realizovaní ich projektov.</p>
 							</div>
-							<div class="small-12 medium-6 large-4 cell">
-								<div class="card">
-									<div class="grid-x grid-padding-x align-justify">
-										<div class="shrink cell">
-											<img src="img/radim-brach-color.jpg" class="profile-pict">
-										</div>
-										<div class="shrink cell">
-											<div class="brand-circle" style="padding-top: 1.3em;"><img src="img/pwc.svg "></div>
-										</div>
+						</div>
+						<div class="small-12 medium-6 large-4 cell">
+							<div class="card">
+								<div class="grid-x grid-padding-x align-justify">
+									<div class="shrink cell">
+										<img src="img/radim-brach-color.jpg" class="profile-pict">
 									</div>
-
-									<h4>Radim Brach <span class="subtle">z</span> PwC</h4>
-
-									<p class="quote">Startup Weekend přestavuje skvělou možnost potkat se s lidmi, které zajímají inovace a byznys jako takový. Víkend plný entusiasmu a nápaditých myšlenek s cílem změnit co se dá. PwC Technology consulting rádo podpořilo tuto akci a vstoupilo tak do startupové komunity v České republice.</p>
+									<div class="shrink cell">
+										<div class="brand-circle" style="padding-top: 1.3em;"><img src="img/pwc.svg "></div>
+									</div>
 								</div>
+
+								<h4>Radim Brach <span class="subtle">z</span> PwC</h4>
+
+								<p class="quote">Startup Weekend přestavuje skvělou možnost potkat se s lidmi, které zajímají inovace a byznys jako takový. Víkend plný entusiasmu a nápaditých myšlenek s cílem změnit co se dá. PwC Technology consulting rádo podpořilo tuto akci a vstoupilo tak do startupové komunity v České republice.</p>
 							</div>
 						</div>
 					</div>
+
 				</div>
 			</div>
 		</div>
@@ -381,7 +381,13 @@
 
 	<div class="block" id="kontakt">
 		<div class="grid-container ">
-			<h2>Staňte se součástí startupové scény</h2>
+			<div class="grid-x grid-padding-x ">
+				<div class="small-12 medium-10 medium-offset-1 large-8 large-offset-2 cell text-center">
+					<h2 class="gradient">Staňte se součástí startupové scény</h2>
+					<p>Napiste nam</p>
+					<h4>info@startovani.cz</h4>
+				</div>
+			</div>
 		</div>
 		<!-- grid-container -->
 	</div>
