mvp of Calendar

--- a/index.html
+++ b/index.html
@@ -302,11 +302,57 @@
 
 	<div class="block" id="kalendar-akci">
 		<div class="grid-container ">
-			<div class="grid-x grid-padding-x ">
-				<div class="large-12 cell ">
-					<div class="0callout ">
-						<h2 class="gradient">Kalendář akcí</h2>
-					</div>
+			<h2 class="gradient">Kalendář akcí</h2>
+			<h4 class="subtle">2018</h4>
+			<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-6">
+				<div class="cell ">
+
+					<h4>leden</h4>
+
+				</div>
+				<div class="cell ">
+					<h4>
+						unor</h4>
+				</div>
+				<div class="cell ">
+					<h4>
+						brezen</h4>
+				</div>
+				<div class="cell ">
+					<h4>
+						duben</h4>
+				</div>
+				<div class="cell ">
+					<h4>
+						kveten</h4>
+				</div>
+				<div class="cell ">
+					<h4>
+						cerven</h4>
+				</div>
+				<div class="cell ">
+					<h4>
+						cervenec</h4>
+				</div>
+				<div class="cell ">
+					<h4>
+						srpen</h4>
+				</div>
+				<div class="cell ">
+					<h4>
+						zari</h4>
+				</div>
+				<div class="cell ">
+					<h4>
+						rijen</h4>
+				</div>
+				<div class="cell ">
+					<h4>
+						listopad</h4>
+				</div>
+				<div class="cell ">
+					<h4>
+						prosinec</h4>
 				</div>
 			</div>
 		</div>
