calendar almost done

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Foundation for Sites</title>
+	<title>Startovani.cz</title>
 	<link rel="stylesheet" href="css/foundation.css">
 	<link rel="stylesheet" href="css/app.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,400italic,700;subset=latin-ext" rel="stylesheet">
@@ -239,7 +239,7 @@
 	<!-- block -->
 
 
-	<div class="block ">
+	<div class="block">
 		<div class="grid-container ">
 
 			<div class="grid-x grid-padding-x ">
@@ -304,76 +304,73 @@
 		<div class="grid-container ">
 			<h2 class="gradient">Kalendář akcí</h2>
 			<h4 class="subtle">2018</h4>
-			<div class="grid-x grid-padding-x small-up-3 medium-up-4 large-up-6 calendar">
-				<div class="cell ">
-					<div class="inner">
+			<div class="grid-x grid-margin-x small-up-3 medium-up-4 large-up-6 calendar" data-equalizer>
+				<div class="cell">
+					<div class="inner" data-equalizer-watch>
 						<h4>leden</h4>
 					</div>
 				</div>
 				<div class="cell ">
-					<div class="inner">
-						<h4>
-							unor</h4>
+					<div class="inner" data-equalizer-watch>
+						<h4>unor</h4>
+					</div>
+				</div>
+				<div class="cell active">
+					<div class="inner" data-equalizer-watch>
+						<h4>brezen</h4>
+						<div class="event">
+							<p>2.<span class="ndash">&ndash;</span>4. 3.<br>
+								<b>Startupweekend Prague</b></p>
+						</div>
 					</div>
 				</div>
 				<div class="cell ">
-					<div class="inner">
-						<h4>
-							brezen</h4>
+					<div class="inner" data-equalizer-watch>
+						<h4>duben</h4>
 					</div>
 				</div>
 				<div class="cell ">
-					<div class="inner">
-						<h4>
-							duben</h4>
+					<div class="inner" data-equalizer-watch>
+						<h4>kveten</h4>
 					</div>
 				</div>
 				<div class="cell ">
-					<div class="inner">
-						<h4>
-							kveten</h4>
+					<div class="inner" data-equalizer-watch>
+						<h4>cerven</h4>
+					</div>
+				</div>
+				<div class="cell active">
+					<div class="inner" data-equalizer-watch>
+						<h4>cervenec</h4>
+						<div class="event">
+							<p>12. 7.<br>
+								<b>Starup Grind Prague</b></p>
+						</div>
 					</div>
 				</div>
 				<div class="cell ">
-					<div class="inner">
-						<h4>
-							cerven</h4>
+					<div class="inner" data-equalizer-watch>
+						<h4>srpen</h4>
 					</div>
 				</div>
 				<div class="cell ">
-					<div class="inner">
-						<h4>
-							cervenec</h4>
+					<div class="inner" data-equalizer-watch>
+						<h4>zari</h4>
 					</div>
 				</div>
 				<div class="cell ">
-					<div class="inner">
-						<h4>
-							srpen</h4>
+					<div class="inner" data-equalizer-watch>
+						<h4>rijen</h4>
 					</div>
 				</div>
 				<div class="cell ">
-					<div class="inner">
-						<h4>
-							zari</h4>
+					<div class="inner" data-equalizer-watch>
+						<h4>listopad</h4>
 					</div>
 				</div>
 				<div class="cell ">
-					<div class="inner">
-						<h4>
-							rijen</h4>
-					</div>
-				</div>
-				<div class="cell ">
-					<div class="inner">
-						<h4>
-							listopad</h4>
-					</div>
-				</div>
-				<div class="cell ">
-					<div class="inner">
-						<h4>
-							prosinec</h4>
+					<div class="inner" data-equalizer-watch>
+						<h4>prosinec</h4>
 					</div>
 				</div>
 			</div>
