--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/foundation.css">
 	<link rel="stylesheet" href="css/app.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,400italic,700;subset=latin-ext" rel="stylesheet">
+	<script defer src="js/fontawesome-all.js"></script>
 </head>
 
 <body>
@@ -188,7 +189,7 @@
 				<div class="small-12 medium-5 large-4 cell ">
 					<h3>Organizujeme Startup weekendy</h3>
 					<p>Naší úlohou je pomoci lidem při prvním kroku stavby digitální produkty - dát dohromady, designéry, vývojáře a marketéry, poskytnout jim nástroje, veškeré zázemí a mentoring. Tak, aby měli po víkendu odvahu, kontakty a podporu k další nesnadné práci.</p>
-					<p><a href="https://www.facebook.com/swprague/" class="button"> Startupweekend Prague Page</a></p>
+					<p><a href="https://www.facebook.com/swprague/" class="button"><i class="fab fa-facebook"></i> Startupweekend Prague Page</a></p>
 				</div>
 				<div class="small-12 medium-7 large-8 cell ">
 					<div class="grid-x grid-padding-x" data-equalizer data-equalize-on="medium">
@@ -247,7 +248,7 @@
 				<div class="small-12 medium-5 large-4 cell medium-order-2">
 					<h3>Pořádáme měsíčně Startup Grind</h3>
 					<p>Startup Grind je největší startup komunita na světě. Cílem Startup Grindu je vzdělávat, inspirovat a propojovat lokální podnikatele. Jednou měsíčně si na akci zveme úspěšné podnikatele, se kterými vedeme moderovanou diskuzi (tzv. fireside chat) o jejich podnikatelské cestě.</p>
-					<p><a href="https://www.facebook.com/StartupGrindPrague/" class="button"> Startup Grind Prague Page</a></p>
+					<p><a href="https://www.facebook.com/StartupGrindPrague/" class="button"><i class="fab fa-facebook"></i> Startup Grind Prague Page</a></p>
 				</div>
 				<div class="small-12 medium-7 large-8 cell medium-order-1">
 					<div class="grid-x grid-padding-x" data-equalizer data-equalize-on="medium">
