buttons in calendar

--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
 						<div class="event">
 							<p>12. 7.<br>
 								<b>Starup Grind Prague</b></p>
+							<a href="https://www.startupgrind.com/events/details/startup-grind-prague-presents-sky-is-the-limit-with-oliver-dlouhy-ceo-co-founder-kiwicom#/" class="button small expanded">Vice info</a>
 						</div>
 					</div>
 				</div>
