--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 				<div class="large-4 medium-4 cell ">
 					<div class="card">
 						<h2>920</h2>
-						<p>ucastniku</p>
+						<p>Ucastniku</p>
 					</div>
 				</div>
 				<div class="large-4 medium-4 cell ">
 					<div class="card">
 						<h2>5</h2>
-						<p>startupu</p>
+						<p>Postavenych startupu</p>
 					</div>
 				</div>
 			</div>
@@ -347,7 +347,7 @@
 						<h4>cervenec</h4>
 						<div class="event">
 							<p>12. 7.<br>
-								<b>Starup Grind Prague</b></p>
+								<b>Startup Grind Prague</b></p>
 							<a href="https://www.startupgrind.com/events/details/startup-grind-prague-presents-sky-is-the-limit-with-oliver-dlouhy-ceo-co-founder-kiwicom#/" class="button small expanded">Vice info</a>
 						</div>
 					</div>
