--- a/index.html
+++ b/index.html
@@ -307,13 +307,13 @@
 		<div class="grid-container ">
 			<h2 class="gradient">Kalendář akcí</h2>
 			<h4 class="subtle">2018</h4>
-			<div class="grid-x grid-margin-x small-up-3 medium-up-4 large-up-6 calendar" data-equalizer>
-				<div class="cell">
+			<div class="grid-x grid-margin-x small-up-1 medium-up-3 large-up-4 calendar" data-equalizer>
+				<div class="cell empty">
 					<div class="inner" data-equalizer-watch>
 						<h4>leden</h4>
 					</div>
 				</div>
-				<div class="cell ">
+				<div class="cell empty">
 					<div class="inner" data-equalizer-watch>
 						<h4>unor</h4>
 					</div>
@@ -327,17 +327,17 @@
 						</div>
 					</div>
 				</div>
-				<div class="cell ">
+				<div class="cell empty">
 					<div class="inner" data-equalizer-watch>
 						<h4>duben</h4>
 					</div>
 				</div>
-				<div class="cell ">
+				<div class="cell empty">
 					<div class="inner" data-equalizer-watch>
 						<h4>kveten</h4>
 					</div>
 				</div>
-				<div class="cell ">
+				<div class="cell empty">
 					<div class="inner" data-equalizer-watch>
 						<h4>cerven</h4>
 					</div>
@@ -348,31 +348,31 @@
 						<div class="event">
 							<p>12. 7.<br>
 								<b>Startup Grind Prague</b></p>
-							<a href="https://www.startupgrind.com/events/details/startup-grind-prague-presents-sky-is-the-limit-with-oliver-dlouhy-ceo-co-founder-kiwicom#/" class="button small expanded">Vice info</a>
+							<a href="https://www.startupgrind.com/events/details/startup-grind-prague-presents-sky-is-the-limit-with-oliver-dlouhy-ceo-co-founder-kiwicom#/" class="button small ">Vice info</a>
 						</div>
 					</div>
 				</div>
-				<div class="cell ">
+				<div class="cell empty">
 					<div class="inner" data-equalizer-watch>
 						<h4>srpen</h4>
 					</div>
 				</div>
-				<div class="cell ">
+				<div class="cell empty">
 					<div class="inner" data-equalizer-watch>
 						<h4>zari</h4>
 					</div>
 				</div>
-				<div class="cell ">
+				<div class="cell empty">
 					<div class="inner" data-equalizer-watch>
 						<h4>rijen</h4>
 					</div>
 				</div>
-				<div class="cell ">
+				<div class="cell empty">
 					<div class="inner" data-equalizer-watch>
 						<h4>listopad</h4>
 					</div>
 				</div>
-				<div class="cell ">
+				<div class="cell empty">
 					<div class="inner" data-equalizer-watch>
 						<h4>prosinec</h4>
 					</div>
