add line for nav
for better nav menu recognition

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 						</div>
 					</div>
 				</div>
+				<div class="line cell">
+
+				</div>
 				<div class="small-12 cell small-order-3">
 					<ul class="nav-menu">
 						<li><a href="#co-ziskate">Co získáte</a></li>
