Icons for stats

--- a/index.html
+++ b/index.html
@@ -77,22 +77,22 @@
 		<div class="grid-container ">
 			<h2 class="gradient">Co děláme a proč to dělat s námi</h2>
 			<p>Dělat překonat choroboplodných, mnohé takže místu než u při zjistil pojmenovali zemědělské dochází ochlazení způsobem i rituál techniky, silou nějaká s jih, ve 1591 domněnku kanadských vliv stejného jinak.</p>
-			<div class="grid-x grid-padding-x">
+			<div class="grid-x grid-padding-x stats" data-equalizer data-equalize-on="medium">
 				<div class="large-4 medium-4 cell ">
-					<div class="card">
-						<h2>15</h2>
+					<div class="card" data-equalizer-watch>
+						<h2><i class="far fa-calendar-alt"></i> &nbsp;15</h2>
 						<p>Akci</p>
 					</div>
 				</div>
 				<div class="large-4 medium-4 cell ">
-					<div class="card">
-						<h2>920</h2>
+					<div class="card" data-equalizer-watch>
+						<h2><i class="far fa-users"></i> &nbsp;920</h2>
 						<p>Ucastniku</p>
 					</div>
 				</div>
 				<div class="large-4 medium-4 cell ">
-					<div class="card">
-						<h2>5</h2>
+					<div class="card" data-equalizer-watch>
+						<h2><i class="far fa-rocket"></i> &nbsp;5</h2>
 						<p>Postavenych startupu</p>
 					</div>
 				</div>
